# fl-op

./: .codex  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  TODOS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
contracts/: registry.yaml
contracts/avro/: depots.avsc  execution-events.avsc  fields.avsc  implements.avsc  operators.avsc  orders.avsc  vehicles.avsc  weather.avsc
contracts/canonical/: model.yaml
contracts/evolution/: attachments.json  canonical-asset.json  canonical-commitment.json  canonical-cost-rate.json  canonical-execution-event.json  canonical-forecast.json  canonical-location.json  canonical-observation.json  canonical-plan.json  canonical-task.json  canonical-travel-link.json  construction-operators.json  depots.json  drone-delivery-locations.json  drone-delivery-orders.json  drone-logistics-hubs.json  drone-operators.json  drone-payload-modules.json  drone-prices.json  drone-restricted-zones.json  drone-travel-links.json  drone-uavs.json  drone-ugvs.json  drone-weather.json  execution-events.json  fields.json  implements.json  jobs.json  machines.json  operators.json  orders.json  prices.json  roadside-inspection-rounds.json  roadside-maintenance-jobs.json  roadside-road-segments.json  roadside-service-depots.json  roadside-service-kits.json  roadside-service-vehicles.json  roadside-signage.json  roadside-technicians.json  (+7 more)
contracts/odcs/: depots.odcs.yaml  execution-events.odcs.yaml  fields.odcs.yaml  implements.odcs.yaml  operators.odcs.yaml  orders.odcs.yaml  vehicles.odcs.yaml  weather.odcs.yaml
contracts/profiles/: agricultural-custom-services.profile.yaml
docs/: authoring-domain-contracts.md  current-implementation.md  future-improvements.md  usage.md
docs/adr/: ADR-001-solver-library.md  ADR-002-compat-matrix-numpy.md  ADR-003-haversine-balltree.md  ADR-004-hierarchical-decomposition.md  ADR-005-global-pre-allocation.md  ADR-006-worker-plain-dicts.md  ADR-007-worker-tuple-return.md  ADR-008-operation-enums.md  ADR-009-spawn-pool.md  ADR-010-num-search-workers.md  ADR-011-pydantic-circular-refs.md  ADR-012-greedy-warm-start.md  ADR-013-typed-dict-pipeline-contracts.md  ADR-014-penalty-weighted-allocation.md  ADR-015-sklearn-balltree.md  (+6 more)
scripts/: setup-gstack.sh
tests/: conftest.py  test_adapter_spi.py  test_aggregator.py  test_airspace_deconfliction.py  test_artifact_objectstore.py  test_assessment.py  test_canonical_model.py  test_charging_schedule.py  test_cli.py  test_cli_planning.py  test_cluster_solver.py  test_compartment_loading.py  test_contracts_roundtrip.py  test_corrective.py  test_cost_model_expansion.py  test_cost_rates.py  test_demo_summary.py  test_distributed_consistency.py  test_domain_pack_plugins.py  test_drone_logistics.py  test_duration_estimation.py  test_enforcement.py  test_event_arrival_visibility.py  test_fingerprint_stability.py  test_finish_within_windows.py  test_greedy.py  test_held_operator_breaks.py  test_held_windows.py  test_lead_time.py  test_mapping.py  test_material_reservations.py  test_models.py  test_monitoring.py  test_multi_domain.py  test_multi_domain_staging.py  test_observation_mapping.py  test_operator_no_overlap.py  test_operator_sharing_sequential.py  test_performance.py  test_pickup_delivery_coverage.py  (+32 more)
(+321 files in other folders)
