[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-op"
version = "0.1.0"
description = "Agricultural fleet optimization CLI (HFVRPTW + multi-resource scheduling)"
requires-python = ">=3.10"
dependencies = [
    "ortools>=9.10",
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.0",
    "click>=8.1",
    "scikit-learn>=1.4",
    "fastavro>=1.9",
    "pyyaml>=6.0",
    "pyarrow>=24.0.0",
]

[project.scripts]
fl-op = "fl_op.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fl_op"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]
