[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-op"
version = "0.1.0"
description = "Agricultural fleet optimization CLI (HFVRPTW + multi-resource scheduling)"
requires-python = ">=3.10"
dependencies = [
    "ortools>=9.10",
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.0",
    "click>=8.1",
    "scikit-learn>=1.4",
    "fastavro>=1.9",
    "pyyaml>=6.0",
    "pyarrow>=24.0.0",
    "optuna>=4.9.0",
    "mlflow-skinny>=3.13.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyproj>=3.7.1",
    "shapely>=2.1.2",
]

[project.optional-dependencies]
# Broker-backed event-bus ingestion (EVENT_SOURCE_KIND=kafka).
broker = [
    "confluent-kafka>=2.5",
]
# Redis Streams event-bus ingestion (EVENT_SOURCE_KIND=redis).
redis = [
    "redis>=5.0",
]
# OIDC/JWT validation for the serving API (SERVE_AUTH_MODE=oidc).
auth = [
    "pyjwt[crypto]>=2.8",
]

[project.scripts]
fl-op = "fl_op.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fl_op"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "httpx2>=0.1",
    # Exercises the OIDC/JWT serving auth path (the [auth] extra) in tests.
    "pyjwt[crypto]>=2.8",
    # Exercises the Redis Streams event client (the [redis] extra) against an
    # in-memory fakeredis server; set FL_OP_TEST_REDIS_URL to test a real one.
    "redis>=5.0",
    "fakeredis>=2.21",
]
